--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ before_script:
     # - adb shell input keyevent 82 &
 
 script:
-    ./gradlew clean testReleaseUnitTestCoverage assembleRelease
+    ./gradlew clean testRelease assembleRelease
