--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,20 +3,20 @@ node {
     // 1) Compile Stage
 
     stage 'Compile'
-    bat "./gradlew clean compileReleaseSources"
+    bat "gradlew.bat clean compileReleaseSources"
 
     // 2) Tests Stage
 
     stage 'Tests'
-    bat "./gradlew testRelease"
+    bat "gradlew.bat testRelease"
 
     // 3) Assemble Stage
 
     stage 'Assemble'
-    bat "./gradlew assembleRelease"
+    bat "gradlew.bat assembleRelease"
 
     // 4) Publish Stage
 
     stage 'Publish'
-    bat "./gradlew publishApkRelease"
+    bat "gradlew.bat publishApkRelease"
 }
