Configurando testes de instrumentação para tipo de build release.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ android {
         }
     }
 
+    testBuildType "release"
+
     play {
 
         serviceAccountEmail = System.getenv("SERVICE_ACCOUNT_EMAIL")
