--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,6 @@ before_script:
     # - adb shell input keyevent 82 &
 
 script:
-    ./gradlew clean testRelease assembleRelease
+    ./gradlew clean testReleaseUnitTest assembleRelease
 
 
