--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,5 @@ before_script:
     # - adb shell input keyevent 82 &
 
 script:
-    ./gradlew clean testReleaseUnitTest assembleRelease
-
+    ./gradlew clean testReleaseUnitTest checkstyle findbugs pmd lint assembleRelease
 
