--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.triplet.play'
 
+apply from: "${rootProject.getRootDir()}/config/quality/quality.gradle"
+
 // Versioning information
 def versionMajor = 0
 def versionMinor = 1
