Configurando o build.gradle.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,12 @@ android {
         release {
 
             storeFile rootProject.file('rachaconta.jks')
-            storePassword System.getenv("KEYSTORE_PASSWORD")
-            keyAlias System.getenv("ALIAS_NAME")
-            keyPassword System.getenv("ALIAS_PASSWORD")
+            // storePassword System.getenv("KEYSTORE_PASSWORD")
+            // keyAlias System.getenv("ALIAS_NAME")
+            // keyPassword System.getenv("ALIAS_PASSWORD")
+            storePassword System.getenv().KEYSTORE_PASSWORD
+            keyAlias System.getenv().ALIAS_NAME
+            keyPassword System.getenv().ALIAS_PASSWORD
         }
     }
 
@@ -50,7 +53,8 @@ android {
 
     play {
 
-        serviceAccountEmail = System.getenv("SERVICE_ACCOUNT_EMAIL")
+        // serviceAccountEmail = System.getenv("SERVICE_ACCOUNT_EMAIL")
+        serviceAccountEmail = System.getenv().SERVICE_ACCOUNT_EMAIL
         pk12File = rootProject.file('play.p12')
         track = 'alpha'
     }
