--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -30,8 +30,8 @@ task findbugs(type: FindBugs, dependsOn: assembleDebug) {
 
     reports {
 
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
 
         xml {
             destination "$project.buildDir/reports/findbugs/findbugs.xml"
@@ -58,8 +58,8 @@ task pmd(type: Pmd) {
 
     reports {
 
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
 
         xml {
             destination "$project.buildDir/reports/pmd/pmd.xml"
