--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.github.triplet.play'
 
 apply from: "${rootProject.getRootDir()}/config/quality/quality.gradle"
+apply from: "${rootProject.getRootDir()}/jacoco.gradle"
 
 // Versioning information
 def versionMajor = 0
