Não abortar build em caso de issue detectada pelo Lint.

--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -75,7 +75,7 @@ android {
 
     lintOptions {
 
-        abortOnError true
+        abortOnError false
         xmlReport true
         htmlReport false
         lintConfig file("${project.rootDir}/config/quality/lint/lint.xml")
