Habilitando testes de instrumentação para o Travis CI.

--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -38,6 +38,7 @@ project.afterEvaluate {
                                    '**/R$*.class',
                                    '**/*$ViewInjector*.*',
                                    '**/*$ViewBinder*.*',
+                                   '**/BuildConfig.*',
                                    '**/Manifest*.*']
                 )
 
