--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ before_install:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-    # - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
-    # - emulator -avd test -no-skin -no-audio -no-window &
-    # - android-wait-for-emulator
-    # - adb shell input keyevent 82 &
+    - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 script:
-    ./gradlew clean testReleaseUnitTest checkstyle findbugs pmd lintRelease assembleRelease
+    ./gradlew clean testReleaseUnitTest checkstyle findbugs pmd lintRelease connectedReleaseAndroidTest assembleRelease
 
