--- a/circle.yml
+++ b/circle.yml
@@ -5,17 +5,17 @@ dependencies:
 test:
     # pre:
         # Inicia emulador Android
-            # - emulator -avd circleci-android22 -no-audio -no-window:
-                # background: true
-                # parallel: true
+            - emulator -avd circleci-android22 -no-audio -no-window:
+                background: true
+                parallel: true
         # Espera o emulador iniciar antes de serem dados os comandos para execução dos testes
-            # - circle-android wait-for-boot
+            - circle-android wait-for-boot
 
     override:
         # Adicionando permissão para executar gradlew
         - chmod +x gradlew
         # Executa testes e gera artefatos
-        - ./gradlew clean testReleaseUnitTest checkstyle findbugs pmd lintRelease assembleRelease
+        - ./gradlew clean testReleaseUnitTest checkstyle findbugs pmd lintRelease connectedReleaseAndroidTest assembleRelease
         # Copia a saída do build para a pasta de artefatos
         - cp -r app/build/outputs $CIRCLE_ARTIFACTS
         # Copia os resultados de testes para o diretório de resultados de testes
