Ajuste na configuração de build do Circle CI.

--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ dependencies:
         - chmod +x gradlew
 
 test:
-    # pre:
+    pre:
         # Inicia emulador Android
             - emulator -avd circleci-android22 -no-audio -no-window:
                 background: true
