--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
+        classpath 'de.felixschulze.gradle:gradle-hockeyapp-plugin:3.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
