--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
 
     repositories {
+
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
@@ -11,6 +13,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
         classpath 'de.felixschulze.gradle:gradle-hockeyapp-plugin:3.4'
+        classpath 'io.fabric.tools:gradle:1.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +23,9 @@ buildscript {
 allprojects {
 
     repositories {
+
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
