--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,16 @@ buildscript {
 
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
     }
 
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
         classpath 'de.felixschulze.gradle:gradle-hockeyapp-plugin:3.4'
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.realm:realm-gradle-plugin:2.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
