--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ test:
         # Adicionando permissão para executar gradlew
         - chmod +x gradlew
         # Executa testes e gera artefatos
-        - ./gradlew clean testReleaseUnitTest connectedAndroidTest -PtestBuildType=release assembleRelease
+        - ./gradlew clean testReleaseUnitTest connectedAndroidTest -PtestBuildType=release assembleRelease publishApkRelease
         # Copia a saída do build para a pasta de artefatos
         - cp -r app/build/outputs $CIRCLE_ARTIFACTS
         # Copia os resultados de testes para o diretório de resultados de testes
