--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ before_script:
     - adb shell input keyevent 82 &
 
 script:
-    ./gradlew clean testReleaseUnitTest connectedAndroidTest -PtestBuildType=release assembleRelease
+    ./gradlew clean testReleaseUnitTest assembleRelease
 
