--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,9 @@
+machine:
+java:
+version: openjdk8
+environment:
+ANDROID_HOME: /usr/local/android-sdk-linux
+
 dependencies:
     override:
         - chmod +x gradlew
