--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,12 @@
 machine:
-java:
-version: openjdk8
 environment:
 ANDROID_HOME: /usr/local/android-sdk-linux
+ADB_INSTALL_TIMEOUT: "20"
+TERM: "dumb"
+JAVAOPTIONS: "-Xms1024m -Xmx2048m"
+GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+java:
+version: openjdk8
 
 dependencies:
     override:
