--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -34,11 +34,11 @@ task findbugs(type: FindBugs, dependsOn: "assembleDebug") {
         html.enabled = false
 
         xml {
-            destination "$project.buildDir/reports/findbugs/findbugs.xml"
+            destination file("$project.buildDir/reports/findbugs/findbugs.xml")
         }
 
         html {
-            destination "$project.buildDir/reports/findbugs/findbugs.html"
+            destination file("$project.buildDir/reports/findbugs/findbugs.html")
         }
     }
 
@@ -62,11 +62,11 @@ task pmd(type: Pmd) {
         html.enabled = false
 
         xml {
-            destination "$project.buildDir/reports/pmd/pmd.xml"
+            destination file("$project.buildDir/reports/pmd/pmd.xml")
         }
 
         html {
-            destination "$project.buildDir/reports/pmd/pmd.html"
+            destination file("$project.buildDir/reports/pmd/pmd.html")
         }
     }
 }
