--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,16 @@
 buildscript {
 
     repositories {
-
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
+        google()
         mavenCentral()
+        jcenter()
+       maven { url 'https://maven.fabric.io/public' }
+
     }
 
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.5'
         classpath 'de.felixschulze.gradle:gradle-hockeyapp-plugin:3.4'
         classpath 'io.fabric.tools:gradle:1.+'
@@ -25,9 +26,13 @@ buildscript {
 allprojects {
 
     repositories {
-
+        google()
+        mavenCentral()
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
+       maven { url 'https://maven.fabric.io/public' }
+    }
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
     }
 }
 
