--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+    - echo no | avdmanager create avd --force -n test --abi armeabi-v7a --package 'system-images;android-24;google_apis;x86_64'
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
