--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
 # Emulator Management: Create, Start and Wait
 before_script:
     - android list targets
-    - android create avd --force -n test -t android-24 --abi armeabi-v7a
+    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
