--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ android:
   components:
     # Descomente as linhas abaixo se você quiser
     # usar a última revisão de Android SDK Tools
-    #- platform-tools
-    # tools
+    - platform-tools
+    - tools
 
     # A versão do BuildTools usada pelo seu projeto
     - build-tools-24.0.3
@@ -43,9 +43,9 @@ before_install:
 # Emulator Management: Create, Start and Wait
 before_script:
     - android list targets
-    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    # android-wait-for-emulator
+    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a -c 100M
+    - emulator -avd test -no-audio -no-window -verbose -debug init &
+    - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
 script:
