--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 jdk:
   - oraclejdk8
   
-install: travis_wait 
+install: travis_wait 30 mvn install
 
 env:
   global:
@@ -17,8 +17,8 @@ android:
   components:
     # Descomente as linhas abaixo se você quiser
     # usar a última revisão de Android SDK Tools
-    - platform-tools
-    - tools
+    # platform-tools
+    # tools
 
     # A versão do BuildTools usada pelo seu projeto
     - build-tools-24.0.3
