--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_install:
 # Emulator Management: Create, Start and Wait
 before_script:
     - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a -c 100M
-    - emulator -avd test -no-window -verbose &
+    - emulator -avd test -no-window -no-skin -verbose &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
