--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
   
 #install: travis_wait 30
 
-sudo: required
+#sudo: required
 
 #env:
 #  global:
@@ -55,5 +55,6 @@ before_script:
     - adb shell input keyevent 82 &
 
 script:
+    ./gradlew tasks
     ./gradlew clean testReleaseUnitTest assembleRelease publishApkRelease
 
