--- a/.travis.yml
+++ b/.travis.yml
@@ -56,5 +56,5 @@ before_script:
     - adb shell input keyevent 82 &
 
 script:
-    ./gradlew clean testReleaseUnitTest assembleRelease publishApkRelease
+    ./gradlew clean testReleaseUnitTest assembleRelease
 
