--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
         //targetSdkVersion 24
         versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch * 1
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -109,6 +110,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:24.0.0'
     implementation 'com.android.support:design:24.0.0'
     implementation 'com.android.support:recyclerview-v7:24.0.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.0@aar') {
         transitive = true;
