--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 android.library.reference.1=../app/build/intermediates/exploded-aar/com.android.support/appcompat-v7/24.0.0
-#android.enableUnitTestBinaryResources=true
+android.enableUnitTestBinaryResources=true
