--- a/.travis.yml
+++ b/.travis.yml
@@ -57,3 +57,9 @@ before_script:
 script:
     ./gradlew clean testReleaseUnitTest
 
+notifications:
+  slack: rafael-gdgkt:xyLM67u47HITb3YIXtWDlS5H
+    template:
+      - "Build <%{build_url}|#%{build_number}> (<%{compare_url}|%{commit}>) of %{repository_slug}@%{branch} by %{author} %{result} in %{duration}"
+
+
